--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "Backend for Gupta Kirana Store",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index.js",
-    "dev": "node src/index.js",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "build": "echo \"Build completed\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "sequelize-cli db:migrate",
